@@ -53,6 +53,8 @@ struct  mne     mne[] = {
     {	NULL,	".include",	S_INCL,		0,	I_CODE	},
     {	NULL,	".incbin",	S_INCL,		0,	I_BNRY	},
     {   NULL,   ".area",        S_AREA,         0,      0       },
+//    {	NULL,	".psharea",	S_AREA,		0,	O_PSH	},
+//    {	NULL,	".poparea",	S_AREA,		0,	O_POP	},
 //    {	NULL,	".bank",	S_BANK,		0,	0	},
     {   NULL,   ".org",         S_ORG,          0,      0       },
     {   NULL,   ".radix",       S_RADIX,        0,      0       },
@@ -107,8 +109,10 @@ struct  mne     mne[] = {
     {   NULL,   ".fdb",         S_DATA,         0,      O_2BYTE },
 /*    { NULL,   ".3byte",       S_DATA,         0,      O_3BYTE },      */
 /*    { NULL,   ".triple",      S_DATA,         0,      O_3BYTE },      */
+/*    {	NULL,	".dl",		S_DATA,		0,	O_4BYTE	},	*/
 /*    { NULL,   ".4byte",       S_DATA,         0,      O_4BYTE },      */
 /*    { NULL,   ".quad",        S_DATA,         0,      O_4BYTE },      */
+/*    {	NULL,	".long",	S_DATA,		0,	O_4BYTE	},	*/
     {   NULL,   ".blkb",        S_BLK,          0,      O_1BYTE },
     {   NULL,   ".ds",          S_BLK,          0,      O_1BYTE },
     {   NULL,   ".rmb",         S_BLK,          0,      O_1BYTE },
@@ -116,6 +120,7 @@ struct  mne     mne[] = {
     {   NULL,   ".blkw",        S_BLK,          0,      O_2BYTE },
 /*    { NULL,   ".blk3",        S_BLK,          0,      O_3BYTE },      */
 /*    { NULL,   ".blk4",        S_BLK,          0,      O_4BYTE },      */
+/*    {	NULL,	".blkl",	S_BLK,		0,	O_4BYTE	},	*/
     {   NULL,   ".ascii",       S_ASCIX,        0,      O_ASCII },
     {   NULL,   ".ascis",       S_ASCIX,        0,      O_ASCIS },
     {   NULL,   ".asciz",       S_ASCIX,        0,      O_ASCIZ },
@@ -165,6 +170,7 @@ struct  mne     mne[] = {
 	/* Special */
 
     {   NULL,   ".setdp",       S_SDP,          0,      0       },
+//    {	NULL,	".dpgbl",	S_PGD,		0,	0	},
 
         /* Machines */
 
